--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -31,4 +31,4 @@ RUN apt-get update \
 
 RUN pip3 install --upgrade pip
 RUN pip3 install -r requirements.txt
-RUN alias python='/usr/bin/python3'
+RUN ln -s /usr/bin/python3 /usr/bin/python && ln -s /usr/bin/pip3 /usr/bin/pip
