--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -30,4 +30,5 @@ RUN apt-get update \
    
 RUN pip3 install --upgrade pip
 RUN pip3 install -r requirements.txt
+RUN unlink /usr/bin/python
 RUN ln -s /usr/bin/python3 /usr/bin/python && ln -s /usr/bin/pip3 /usr/bin/pip
